practice-k8s/argocd-k8s-kustomization/bases/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-devops
  labels:
    name: local-devops
