practice-k8s/argocd-k8s-kustomization/bases/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-backend-deployment
  name: my-backend-deployment
  namespace: local-devops
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: my-backend
  template:
    metadata:
      labels:
        app: my-backend
    spec:
      containers:
        - name: my-backend
          imagePullPolicy: IfNotPresent
          image: localhost:32000/my-backend:v2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready-check
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /live-check
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
