practice-k8s/argocd-k8s-kustomization/bases/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-loadbalancer
  namespace: local-devops
spec:
  type: LoadBalancer
  selector:
    app: my-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
