practice-k8s/argocd-k8s-kustomization/bases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-backend-ingress
  namespace: local-devops
spec:
  rules:
    - host: demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-backend-clusterip
                port:
                  number: 8080
